# qbit-quick

./: Dockerfile  README.md  pyproject.toml  release.sh
src/qbitquick/: argument_parser.py  cli.py  config.py  error_handler.py  formatters.py  handlers.py  lifespan.py  logging_config.py  main.py  qbit_quick.py  race.ddl  routes.py  server.py  task_manager.py  utils.py
src/qbitquick/database/: database_handler.py
src/qbitquick/log_config/: fallback_logger.py  logging_config.py  logging_loader.py  safe_handler.py
src/qbitquick/resources/: config_schema.json  default_config.json  logging_config.json  pause_events.ddl  race.ddl
templates/: db_view.html
tests/: conftest.py  test_cli.py  test_helpers.py  test_main.py  test_qbit_quick.py  test_routes.py
