[tool.poetry]
name = "qbit-quick"
version = "1.0.0"
description = "qBittorrent racing tools"
authors = ["Michael Comerford <michaelcomerford1@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["qBittorrent", "racing"]
packages = [{ include = "qbitquick", from = "src" }]

[tool.poetry.dependencies]
jsonschema = "^4.24.0"
platformdirs = "^4.3.8"
python = ">=3.10"
qbittorrent-api = "^2025.5.0"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.1"

[tool.poetry.scripts]
qbit-quick = "qbitquick.qbit_quick:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"